IKASAN-2348 allow core modules to be accessed for reflection access (Mockery)